implement requested changes (yet again), small code cleanup